Fixed myPage issues on small screens with splitcontent

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -128,6 +128,12 @@ div#content.collapsed {
 	padding:0 10px 0 0;
 	width:48%;
 }
+.splitcontentleft table.list, .splitcontentright table.list{
+    width: 100%;
+}
+.splitcontentleft table.list a, .splitcontentright table.list a{
+    white-space: normal;
+}
 div#main.nosidebar div#content {
 	margin-right: 0px;
 }
@@ -351,7 +357,13 @@ h2, h3, h4, .wiki h1, .wiki h2, .wiki h3 {border-bottom: 0px;}
 
 /* Tables */
 
-table.list tbody td, table.list tbody tr:hover td { border: solid 1px #d7d7d7; }
+table.list tbody td, table.list tbody tr:hover td { 
+    border: solid 1px #d7d7d7; 
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
 table.list thead th {
     border-width: 1px;
     border-style: solid;
@@ -384,15 +396,19 @@ table.list tr.issue a { color: #666; }
  * Coloring for overdue Tickets
  */
 table.list tr.overdue td.id a, table.list tr.overdue td.due_date { color: #FF5757; }
-table.list tr.overdue.context-menu-selection td.id a, table.list tr.overdue.context-menu-selection td.due_date { color: #F8F8F8 !important; }
+
+table.list tr.overdue.context-menu-selection td.id a, 
+table.list tr.overdue.context-menu-selection td.due_date { 
+    color: #F8F8F8 !important; 
+}
 
 table.list{
-table-layout:fixed;
-width:auto;
-min-width:100%;
+    table-layout:fixed;
+    width:auto;
+    min-width:100%;
 }
 table.list tr a{
-white-space:nowrap;
+    white-space:nowrap;
 }
 /* 
  * Sidebar 
@@ -572,6 +588,11 @@ tr.issue td.checkbox{
 
 tr.issue:hover td.checkbox { background-image:none !important;}
 body.admin #header{background-color:#628DB6;background-repeat:repeat;background-size:15px 15px;background-image:linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);}
+
+/* Fix for flickering table columns on IE10 */
+tr.group a.toggle-all{
+    position: absolute;
+}
 
 /* Versions */
 tr.version td.name{
@@ -769,6 +790,11 @@ table.progress td.done {
 #history div.journal .wiki {
 	clear:left;
 	margin-left: 25px;
+}
+
+/* Fix for overlapping columns on timetable */
+tr.time-entry{
+    white-space: normal;
 }
 
 /* Modal form*/
